# mongoc_wrap

./: .gitignore  CMakeLists.txt  README.md
include/: library.h
include/libmongoc-1.0/mongoc/: mongoc-config.h
lib/: libbson-1.0.so.0.0.0  libmmongoc.so_so  libmongoc-1.0.so.0.0.0
src/: library.c
test/: test_main.c
